--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+
+### Spring XML 설정 파일 ###
+src/main/webapp/WEB-INF/spring/root-context.xml
+
+
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
