--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,56 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <!--    Spring 웹 애플리케이션 컨텍스트를 초기화하는 데 사용된다.-->
+    <!--    애플리케이션이 시작될 때 Spring 의 ApplicationContext 를 로드하고, 그 안에 정의된 빈을 초기화 하는 역할-->
+    <!--    contextConfigLocation 에 지정된 xml 파일을 로드한다.-->
+    <!--    xml 파일에서 정의한 Spring 빈들이 애플리케이션 컨텍스트에 등록되고 초기화 된다. -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <!--    Spring 의 ContextLoaderListener 가 사용할 설정 파일의 경로를 지정 -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>WEB-INF/spring/root-context.xml</param-value>
+    </context-param>
+
+    <!--    클라이언트의 모든 요청을 받아 처리할 프론트 컨트롤러인 DispatcherServlet 을 등록하고, -->
+    <!--    해당 서블릿이 사용할 설정 파일을 지정하며, 서버 시작과 동시에 로딩 되도록 한다. -->
+    <servlet>
+        <servlet-name>appTodo</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <init-param>
+            <param-name>contextConfigLocation</param-name>
+            <param-value>WEB-INF/spring/servlet-context.xml</param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+
+    <!--    어떤 URL 요청을 DispatcherServlet 이 처리할 지 설정-->
+    <!--    (여기선 "/" 로 모든 요청 처리)-->
+    <servlet-mapping>
+        <servlet-name>appTodo</servlet-name>
+        <url-pattern>/</url-pattern>
+    </servlet-mapping>
+
+    <!--    해당 필터는 요청과 응답의 문자 인코딩을 UTF-8로 강제 설정해서-->
+    <!--    한글이 깨지거나 특수 문자가 오류 나는 걸 방지한다. -->
+    <filter>
+        <filter-name>encoding</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <!--    -->
+    <!--    위에 설정한 encoding 이름의 필터를 appTodo 서블릿에 적용한다. -->
+    <!--    즉, 사용자가 appTodo 라는 DispatcherServlet 을 거쳐 보내는 -->
+    <!--    모든 요청은 UTF-8 인코딩 필터를 먼저 거친다. -->
+    <filter-mapping>
+        <filter-name>encoding</filter-name>
+        <servlet-name>appTodo</servlet-name>
+    </filter-mapping>
 </web-app>
