feat : modelMapper config - DTO와 VO 간의 매핑을 자동으로 처리

--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,12 @@ dependencies {
      */
     implementation 'org.mybatis:mybatis:3.5.7'
     implementation 'org.mybatis:mybatis-spring:2.0.6'
+
+    /**
+    * ModelMapper 설정
+    * DTO와 VO 간의 매핑을 자동으로 처리
+    */
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.1.1'
 }
 
 test {
