--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,11 +40,15 @@
     <!--    해당 필터는 요청과 응답의 문자 인코딩을 UTF-8로 강제 설정해서-->
     <!--    한글이 깨지거나 특수 문자가 오류 나는 걸 방지한다. -->
     <filter>
-        <filter-name>encoding</filter-name>
+        <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
             <param-value>UTF-8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
         </init-param>
     </filter>
     <!--    -->
@@ -52,7 +56,7 @@
     <!--    즉, 사용자가 appTodo 라는 DispatcherServlet 을 거쳐 보내는 -->
     <!--    모든 요청은 UTF-8 인코딩 필터를 먼저 거친다. -->
     <filter-mapping>
-        <filter-name>encoding</filter-name>
-        <servlet-name>appTodo</servlet-name>
+        <filter-name>encodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
 </web-app>
