feat : valid 의존성 주입

--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,8 @@ dependencies {
     * Valid 애너테이션
     */
     implementation group: 'org.hibernate.validator', name: 'hibernate-validator', version: '6.2.0.Final'
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+
 
     // Mockito -> 테스트를 위한 설정
     testImplementation 'org.mockito:mockito-core:4.11.0'
