--- a/build.gradle
+++ b/build.gradle
@@ -123,6 +123,9 @@ dependencies {
     // json 객체 전달을 위한 설정
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
 
+    testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
+
+
 }
 
 test {
