--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,10 +12,14 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+
     <!--    Spring 의 ContextLoaderListener 가 사용할 설정 파일의 경로를 지정 -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>WEB-INF/spring/root-context.xml</param-value>
+        <param-value>
+            /WEB-INF/spring/root-context.xml
+            /WEB-INF/spring/security-context.xml
+        </param-value>
     </context-param>
 
     <!--    클라이언트의 모든 요청을 받아 처리할 프론트 컨트롤러인 DispatcherServlet 을 등록하고, -->
@@ -59,4 +63,22 @@
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+
+
+    <!-- Spring Security 필터 설정 -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
 </web-app>
+
+
+
