--- a/build.gradle
+++ b/build.gradle
@@ -134,6 +134,9 @@ dependencies {
     implementation 'org.springframework.security:spring-security-web:5.6.2'
     //설정파일 보안처리
     implementation 'org.springframework.security:spring-security-config:5.6.2'
+    //jsp연동
+    implementation 'org.springframework.security:spring-security-taglibs:5.1.5.RELEASE'
+
 
 }
 
