--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-
+<!--jsp파일의 한글 인코딩 설정-->
     <jsp-config>
         <jsp-property-group>
             <url-pattern>*.jsp</url-pattern>
