--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -96,6 +96,18 @@
     </error-page>
 
     <error-page>
+        <error-code>403</error-code>
+        <location>/error/403</location>
+    </error-page>
+
+
+    <error-page>
+        <error-code>401</error-code>
+        <location>/error/401</location>
+    </error-page>
+
+
+    <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/error/default</location>
     </error-page>
